--- a/WindowsFormsApp1/Properties/Resources.resx
+++ b/WindowsFormsApp1/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="gridETRF" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Files\gridETRF.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="UW1965" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\UW1965.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
